k8s/monitoring/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:13.2.3
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-datasource
              mountPath: /etc/grafana/provisioning/datasources
            - name: grafana-dashboard-provider
              mountPath: /etc/grafana/provisioning/dashboards
            - name: grafana-dashboard-json
              mountPath: /var/lib/grafana/dashboards/ticketdaata
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            periodSeconds: 15
      volumes:
        - name: grafana-datasource
          configMap:
            name: grafana-datasource-config
        - name: grafana-dashboard-provider
          configMap:
            name: grafana-dashboard-provider-config
        - name: grafana-dashboard-json
          configMap:
            name: grafana-dashboard-ticketdaata
